[gd_scene load_steps=7 format=3 uid="uid://blsio03dyslvf"]

[ext_resource type="Script" path="res://score_panel/score_panel.gd" id="1_v8gb8"]
[ext_resource type="Texture2D" uid="uid://do43xsut6btoh" path="res://score_panel/sprites/stars.png" id="2_x4bjv"]
[ext_resource type="Texture2D" uid="uid://dlhoas63y744m" path="res://score_panel/sprites/money.png" id="3_y5v4u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5cukt"]
bg_color = Color(0, 0, 0, 0.196078)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="LabelSettings" id="LabelSettings_30pup"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_38rfc"]
font_size = 32

[node name="score_panel" type="Panel"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 8.0
offset_right = 150.0
offset_bottom = 108.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5cukt")
script = ExtResource("1_v8gb8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -119.5
offset_right = 119.5
offset_bottom = 40.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="rating_label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0.0"
label_settings = SubResource("LabelSettings_30pup")
vertical_alignment = 1

[node name="rating_bar" type="TextureProgressBar" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 10.0
value = 10.0
texture_progress = ExtResource("2_x4bjv")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("3_y5v4u")

[node name="salary_label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "$0.00"
label_settings = SubResource("LabelSettings_38rfc")
